--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
     </div>
     <div class="main_container">
     </div>
-    <script src="script.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/short-unique-id@latest/dist/short-unique-id.min.js" defer></script>    
+    <script src="script.js" defer></script>
 </body>
 </html>
